--- a/templates/landing.html
+++ b/templates/landing.html
@@ -20,7 +20,7 @@
                         <a class="nav-link active" href="/">Inicio</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="/buscador">Buscador</a>
+                        <a class="nav-link" href="{{ url_for('buscador') }}">Buscador</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="/about">Acerca del proyecto</a>
@@ -55,7 +55,7 @@
             </p>
 
             <div class="mt-4 d-flex flex-wrap gap-2">
-                <a href="/buscador" class="btn btn-primary">
+                <a href="{{ url_for('buscador') }}" class="btn btn-primary btn-lg">
                     Ir al buscador de términos
                 </a>
                 <a href="/login" class="btn btn-outline-secondary">
