--- a/templates/login.html
+++ b/templates/login.html
@@ -68,6 +68,14 @@
                             </button>
                         </div>
                     </form>
+                    <!-- 👉 Botón para listar usuarios (admin) -->
+                    <div class="mt-3 text-end">
+                        <button type="button"
+                            class="btn btn-outline-secondary btn-sm"
+                            onclick="listarUsuarios()">
+                            Listar usuarios (admin)
+                        </button>
+                    </div>
                 </div>
             </div>
         </div>
